@@ -29,6 +29,7 @@ require File.expand_path(File.dirname(__FILE__) + '/../spec_helper')
 describe Campaign do
   before(:each) do
     @valid_attributes = {
+      :name => "RSpec campaign"
     }
   end
 
